Fix z-index issue hiding the canvas

--- a/style.css
+++ b/style.css
@@ -301,8 +301,7 @@ main {
 
 #ascii-canvas {
     width: 100%;
-    /* max-height: 75dvh; */
-    z-index: -1;
+    z-index: 0;
 }
 
 #ascii-video {
@@ -321,6 +320,7 @@ aside {
     position: absolute;
     right: 0;
     top: 0;
+    z-index: 1;
 }
 
 aside>* {
